2011-07-24  Rob Buis  <rbuis@rim.com>

SVG <use> element is not repositioned when moved to x=0 y=0 through script
        https://bugs.webkit.org/show_bug.cgi?id=53767

        Reviewed by Nikolas Zimmermann.

        Only bail out on zero offset if it is not explicitly set.

        Test: svg/custom/use-move-to-offset.svg

        * rendering/svg/RenderSVGTransformableContainer.cpp:
        (WebCore::RenderSVGTransformableContainer::calculateLocalTransform):
        * rendering/svg/SVGShadowTreeElements.cpp:
        (WebCore::SVGShadowTreeContainerElement::SVGShadowTreeContainerElement):
        (WebCore::SVGShadowTreeContainerElement::setContainerOffset):
        * rendering/svg/SVGShadowTreeElements.h:
        (WebCore::SVGShadowTreeContainerElement::containerOffsetChanged):
        (WebCore::SVGShadowTreeContainerElement::setContainerOffsetChanged):

Canonical link: https://commits.webkit.org/80822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91644 268f45cc-cd09-0410-ab3c-d52691b4dbfc